--- a/index.html
+++ b/index.html
@@ -56,6 +56,13 @@
 
         <hr>
     </div>
+    <footer>
+        <div>
+          <span id="footer1">Created by kelvin clere | all rights reserved</span>
+
+        </div>
+  
+      </footer>
     <script src="main.js"></script>
 </body>
 </html>
